After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 169802 - cell() function ignoring sheet reference
cell() function ignoring sheet reference
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Analytics
1.4.x
Other All
: Normal minor
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-03-10 05:17 UTC by gnome
Modified: 2005-03-10 06:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Gnumeric file illustrating bug. (1.45 KB, application/octet-stream)
2005-03-10 05:23 UTC, gnome
Details

Description gnome 2005-03-10 05:17:54 UTC
Please describe the problem:
If the @ref in =cell("contents", @ref) contains a sheet reference, the function
returns the contents of the corresponding cell on the current sheet, instead of
the sheet named in @ref.

Steps to reproduce:
1. Create new Gnumeric file w/at least two sheets.
2. Put 'foo' into Sheet1!A1
3. Put 'bar' into Sheet2!A1
4. Put '=cell("contents",Sheet1!A1)' into Sheet2!A2


Actual results:
The displayed result is "bar".

Expected results:
The expected result is "foo".

Does this happen every time?
Yes.

Other information:
* Verified that Excel has the expected behavior.
* The obvious workaround (=Sheet1!A1) doesn't work if the cell is blank (the
cell function returns blank, but the direct reference returns 0).
Comment 1 gnome 2005-03-10 05:23:41 UTC
Created attachment 38489 [details]
Gnumeric file illustrating bug.

I know such a simple bug probably doesn't need an attachment, but better safe
than sorry.
Comment 2 Jody Goldberg 2005-03-10 06:11:37 UTC
doh!
Simple fix is in CVS, and will be included in 1.4.3